[project]
name="passphrase-generator"
authors = [{ name = "SypTitan" }]
version="1.0.0"
description="A passphrase generator inspired by XKCD #936"
readme = "README.md"
license = "MIT-feh"
license-files = [ "LICENSE" ]
requires-python = ">=3.12"
dependencies = [
    "argparse"
]

[project.scripts]
generate = "generator:main_cli"
gen = "generator:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["./"]

[tool.uv]
package = true